--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,34 @@
-<resources>
-    <string name="app_name">TheMovie</string>
+<resources xmlns:xliff="http://schemas.android.com/tools">
+    <string name="app_name">Popular Movies</string>
+    <string name="action_sort">Sort</string>
+
+    <string name="title_activity_settings">Settings</string>
+    <string name="title_tab_favourites">Favourites</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="title_activity_detail">Movie Detail</string>
+    <string name="title_activity_review">Reviews</string>
+
+    <string name="alert_message">There is no internet connection. Application only can display whatever has loaded previously.</string>
+    <string name="alert_title">No Internet</string>
+    <string name="alert_button">OK</string>
+
+    <string name="pref_sort_types_label">Sort</string>
+    <string name="pref_sort_types_label_toprated">Top Rated</string>
+    <string name="pref_sort_types_label_nowplaying">Now Playing</string>
+    <string name="pref_sort_types_label_popular">Popular</string>
+
+    <string name="pref_sort_types_key" translatable="false">types</string>
+    <string name="pref_sort_types_nowplaying" translatable="false">now_playing</string>
+    <string name="pref_sort_types_popular" translatable="false">popular</string>
+    <string name="pref_sort_types_toprated" translatable="false">top_rated</string>
+    <string name="previous_button">Previous</string>
+    <string name="next_button">Next</string>
+    <string name="related_movies">Related Movies</string>
+    <string name="review_string">Review(s)</string>
+
+    <string name="format_vote_average"><xliff:g id="vote_average">%1.0f</xliff:g>/10</string>
+    <string name="backdrop_imageview_content_description">This is the backdrop image of this movie</string>
+    <string name="poster_imageview_content_description">This is the poster image of this movie</string>
+    <string name="view_review_button_text">Reviews</string>
 </resources>
